FRW-8868 Adjusted buddy.yml.

--- a/buddy.yml
+++ b/buddy.yml
@@ -340,6 +340,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -380,6 +384,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -466,6 +474,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -512,6 +524,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -596,6 +612,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -635,6 +655,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -680,6 +704,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -720,6 +748,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -766,6 +798,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -806,6 +842,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -852,6 +892,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -891,6 +935,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -936,6 +984,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -975,6 +1027,11 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -1063,6 +1120,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -1112,6 +1173,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -1167,6 +1232,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -1215,6 +1284,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -1269,6 +1342,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -1327,6 +1404,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -1385,6 +1466,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -1450,6 +1535,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
@@ -1510,6 +1599,10 @@
         refs:
             - 'refs/pull/*'
             - 'refs/heads/master'
+  trigger_conditions:
+    - trigger_condition: "VAR_NOT_CONTAINS"
+      trigger_variable_value: "hackathon"
+      trigger_variable_key: "BUDDY_EXECUTION_PULL_REQUEST_HEAD_BRANCH"
   terminate_stale_runs: true
   auto_clear_cache: true
   fail_on_prepare_env_warning: true
