FRW-8868 Adjusted buddy.yml.

--- a/buddy.yml
+++ b/buddy.yml
@@ -357,6 +357,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.functional.mariadb.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
@@ -401,6 +402,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.functional.mariadb.dynamic-store.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
@@ -447,6 +449,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.functional.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
@@ -491,6 +494,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.functional.dynamic-store.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
@@ -541,6 +545,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.acceptance.mariadb.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.acceptance.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept fixtures'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
@@ -580,6 +585,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.acceptance.mariadb.dynamic-store.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.acceptance.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept fixtures'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
@@ -629,6 +635,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.acceptance.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.acceptance.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept fixtures'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
@@ -672,6 +679,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.acceptance.dynamic-store.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.acceptance.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept fixtures'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
@@ -721,6 +729,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.functional.mariadb.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
@@ -765,6 +774,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.functional.mariadb.dynamic-store.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
@@ -815,6 +825,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.functional.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
@@ -859,6 +870,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.functional.dynamic-store.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
@@ -909,6 +921,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.acceptance.mariadb.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.acceptance.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept fixtures'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
@@ -952,6 +965,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.acceptance.mariadb.dynamic-store.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.acceptance.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept fixtures'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
@@ -1001,6 +1015,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.acceptance.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.acceptance.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept fixtures'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
@@ -1045,6 +1060,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.acceptance.dynamic-store.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.acceptance.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept fixtures'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
@@ -1146,6 +1162,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.functional.mariadb.prefer-lowest.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
@@ -1199,6 +1216,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.functional.mariadb.prefer-lowest.dynamic-store.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage0.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.stage1.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.functional.yml'
@@ -1258,6 +1276,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.acceptance.mariadb.prefer-lowest.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.acceptance.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept fixtures'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
@@ -1310,6 +1329,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot -v deploy.ci.acceptance.mariadb.prefer-lowest.dynamic-store.yml'
             - '.ci/snippet/REQUIRE docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing codecept run -c codeception.acceptance.yml'
             - '.ci/snippet/RUN docker/sdk testing codecept fixtures'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
@@ -1369,6 +1389,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot deploy.ci.acceptance.mariadb.yml'
             - '.ci/snippet/RUN docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:api_suite -v docker:True --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s robotframework.tests.api.suite ."'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
@@ -1432,6 +1453,7 @@
             - 'export SPRYKER_PLATFORM_IMAGE=spryker/php:8.2'
             - '.ci/snippet/REQUIRE docker/sdk boot deploy.ci.acceptance.yml'
             - '.ci/snippet/RUN docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:api_suite -v db_engine:psycopg2 -v docker:True --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s robotframework.tests.api.suite ."'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
@@ -1493,6 +1515,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot deploy.ci.api.mariadb.dynamic-store.robot.yml'
             - '.ci/snippet/RUN docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:api_suite -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s robotframework.tests.api.suite ."'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
@@ -1696,6 +1719,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot deploy.ci.api.mariadb.dynamic-store.robot.yml'
             - '.ci/snippet/RUN docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:api_suite -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s robotframework.tests.api.suite.\"*\".positive ."'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
@@ -1732,7 +1756,7 @@
         docker_layer_caching_scope: 'ACTION'
         instance_type: 'GENERAL_MEDIUM'
 
-- pipeline: '[Hackathon] Positive / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Store'
+- pipeline: '[Hackathon] Negative / Docker / Alpine / PHP 8.1 / MariaDB / Robot / API / Dynamic Store'
   events:
       - type: 'PUSH'
         refs:
@@ -1765,6 +1789,7 @@
             - '.ci/snippet/PREPARE'
             - '.ci/snippet/REQUIRE docker/sdk boot deploy.ci.api.mariadb.dynamic-store.robot.yml'
             - '.ci/snippet/RUN docker/sdk up -t'
+            - '.ci/snippet/RUN docker/sdk testing composer dump-autoload -o -a --apcu'
             - '.ci/snippet/RUN docker/sdk testing console queue:worker:start --stop-when-empty'
             - '.ci/snippet/RUN script -q -e -c "docker/sdk exec robot-framework robot -v env:api_suite -v docker:True -v dms:true -v glue_env:http://glue.eu.spryker.local -v bapi_env:http://glue-backend.eu.spryker.local -v sapi_env:http://glue-storefront.eu.spryker.local --exclude skip-due-to-issueORskip-due-to-refactoring -d results -s robotframework.tests.api.suite.\"*\".negative ."'
             - '.ci/snippet/REQUIRE aws configure set default.s3.max_concurrent_requests 80'
